Use placeholder a tags instead of spans.

--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -162,6 +162,10 @@
             .webfont-regular();
             .u-link__colors(@black);
             .u-link__hover-border();
+
+            &.list_link__disabled:hover {
+                .u-link__no-border();
+            }
         }
     }
 
