--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -52,14 +52,14 @@
                         </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Careers
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Español
-                        </span>
+                        </a>
                     </li>
                 </ul>
 
@@ -75,14 +75,14 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Datasets
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Reports
-                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -92,14 +92,14 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         APIs
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Open source projects
-                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -109,19 +109,19 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Toolkits
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Online learning
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Brochures
-                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -131,19 +131,19 @@
                             </h2>
                             <ul class="footer_list">
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Regulations
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Notice and comment
-                                    </span>
+                                    </a>
                                 </li>
                                 <li class="list_item">
-                                    <span class="list_link list_link__disabled">
+                                    <a class="list_link list_link__disabled">
                                         Compliance guides
-                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -198,29 +198,29 @@
 
                 <ul class="footer_long-list">
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Privacy policy & legal notices
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Accessiblity
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Plain writing
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             No FEAR Act
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             FOIA
-                        </span>
+                        </a>
                     </li>
                     <li class="list_item">
                         <a class="list_link" href="http://usa.gov/">
@@ -233,9 +233,9 @@
                         </a>
                     </li>
                     <li class="list_item">
-                        <span class="list_link list_link__disabled">
+                        <a class="list_link list_link__disabled">
                             Ombudsman
-                        </span>
+                        </a>
                     </li>
                 </ul>
 
