--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14962,6 +14962,9 @@ a.focus .summary_header {
 .footer_long-list .list_link.focus {
   border-bottom-width: 1px !important;
 }
+.footer_long-list .list_link.list_link__disabled:hover {
+  border-bottom-width: 0 !important;
+}
 .footer-pre {
   position: relative;
   margin-bottom: 2.8125em;
