--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -89,7 +89,12 @@
         });
     }
 }
-
+.org-chart_role.expandable_target {
+    &:focus {
+        outline: 1px dotted @black;
+        outline-offset: 1px;
+    }
+}
 .slick-slider {
     margin-top: 45px;
 
