--- a/_layouts/calendar-event-filters.html
+++ b/_layouts/calendar-event-filters.html
@@ -3,7 +3,7 @@
     <div class="expandable_header expandable_header__spaced">
         <div class="expandable_header-right expandable_header-right__float-on-medium">
             <button class="expandable_target expandable_target__btn__secondary">
-                Filter posts
+                Filter calendar
                 <span class="expandable_cue-open">
                     <span class="btn_icon__right cf-icon cf-icon-down"></span>
                 </span>
