--- a/_layouts/calendar-event-filters-form.html
+++ b/_layouts/calendar-event-filters-form.html
@@ -9,9 +9,9 @@
                 <label class="form-label-header">
                     Calendars
                 </label>
-            {% for calendar in query.possible_values_for('urlcal')|sort(attribute='term') -%}
+            {% for calendar in query.possible_values_for('person')|sort(attribute='term') -%}
                 <label class="form-group_item">
-                    {{ post_macros.filter_checkbox('urlcal', calendar.term)|safe }}
+                    {{ post_macros.filter_checkbox('person', calendar.term)|safe }}
                 </label>
             {% endfor %}
             </div>
