--- a/_layouts/posts-paginated.html
+++ b/_layouts/posts-paginated.html
@@ -46,70 +46,12 @@
 
 {% endfor %}
 
-
-{# Only show pagination if there is more than one page. #}
-{% if posts.pages > 1 %}
-    <nav class="post-pagination pagination"
-         role="navigation"
-         aria-label="Pagination"
-         data-ajax-action="posts-paginated.html">
-    {% if posts.current_page > 1 %}
-        <a class="btn pagination_prev"
-           href="{{ posts.url_for_page(posts.current_page - 1) }}#pagination_content">
-    {% else %}
-        <a class="btn btn__disabled pagination_prev">
-    {% endif %}
-            <span class="btn_icon__left cf-icon cf-icon-left"></span>
-            Newer
-        </a>
-    {% if posts.current_page < posts.pages %}
-        <a class="btn pagination_next"
-           href="{{ posts.url_for_page(posts.current_page + 1) }}#pagination_content">
-    {% else %}
-        <a class="btn btn__disabled pagination_next">
-    {% endif %}
-            Older
-            <span class="btn_icon__right cf-icon cf-icon-right"></span>
-        </a>
-        <form class="pagination_form" action="#pagination_content">
-            <label class="pagination_label" for="pagination_current-page">
-                Page
-                <span class="u-visually-hidden">
-                    number out of {{ posts.pages }} total pages
-                </span>
-            </label>
-            <input class="pagination_current-page"
-                   id="pagination_current-page"
-                   name="page"
-                   type="number"
-                   min="1"
-                   max="{{ posts.pages }}"
-                   value="{{ posts.current_page }}">
-
-            {#- Include any current filters when submitting this form to allow
-                for paginating through a filtered set of results.
-                Without this the form would change the url to `?page=X` and we
-                would lose any currently applied filters that are in the URL. -#}
-
-            {{ post_macros.print_hidden_filters([
-                'category',
-                'tags',
-                'author',
-                'range_date_gte',
-                'range_date_lte'
-                ])|safe
-            }}
-
-            <label class="pagination_label">
-                <span aria-hidden="true">
-                    of {{ posts.pages }}
-                </span>
-            </label>
-            <button class="btn btn__link pagination_submit" id="pagination_submit" type="submit">
-                Go
-            </button>
-        </form>
-    </nav>
-{% endif %}
+{{ post_macros.pagination(posts, [
+    'category',
+    'tags',
+    'author',
+    'range_date_gte',
+    'range_date_lte'
+]) }}
 
 </div>
