--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -77,71 +77,61 @@
 
 {% macro pagination(query_obj, filters) %}
 
-    {# Only show pagination if there is more than one page. #}
-    {% if query_obj.pages > 1 %}
-        <nav class="post-pagination pagination"
-             role="navigation"
-             aria-label="Pagination"
-             data-ajax-action="posts-paginated.html">
-        {% if query_obj.current_page > 1 %}
-            <a class="btn btn__super pagination_prev"
-               href="{{ query_obj.url_for_page(query_obj.current_page - 1) }}#pagination_content">
-        {% else %}
-            <a class="btn btn__super btn__disabled pagination_prev">
-        {% endif %}
-                <span class="btn_icon__left cf-icon cf-icon-left"></span>
-                Newer
-            </a>
-        {% if query_obj.current_page < query_obj.pages %}
-            <a class="btn btn__super pagination_next"
-               href="{{ query_obj.url_for_page(query_obj.current_page + 1) }}#pagination_content">
-        {% else %}
-            <a class="btn btn__super btn__disabled pagination_next">
-        {% endif %}
-                Older
-                <span class="btn_icon__right cf-icon cf-icon-right"></span>
-            </a>
-            <form class="pagination_form" action="#pagination_content">
-                <label class="pagination_label" for="pagination_current-page">
-                    Page
-                    <span class="u-visually-hidden">
-                        number out of {{ query_obj.pages }} total pages
-                    </span>
-                </label>
-                <input class="pagination_current-page"
-                       id="pagination_current-page"
-                       name="page"
-                       type="number"
-                       min="1"
-                       max="{{ query_obj.pages }}"
-                       value="{{ query_obj.current_page }}">
-
-                {#- Include any current filters when submitting this form to allow
-                    for paginating through a filtered set of results.
-                    Without this the form would change the url to `?page=X` and we
-                    would lose any currently applied filters that are in the URL. -#}
-
-                {{ print_hidden_filters(filters)|safe }}
-
-                {#{{ post_macros.print_hidden_filters([
-                    'category',
-                    'tags',
-                    'author',
-                    'range_date_gte',
-                    'range_date_lte'
-                    ])|safe
-                }}#}
-
-                <label class="pagination_label">
-                    <span aria-hidden="true">
-                        of {{ query_obj.pages }}
-                    </span>
-                </label>
-                <button class="btn btn__link pagination_submit" id="pagination_submit" type="submit">
-                    Go
-                </button>
-            </form>
-        </nav>
+{# Only show pagination if there is more than one page. #}
+{% if query_obj.pages > 1 %}
+    <nav class="post-pagination pagination"
+         role="navigation"
+         aria-label="Pagination"
+         data-ajax-action="posts-paginated.html">
+    {% if query_obj.current_page > 1 %}
+        <a class="btn btn__super pagination_prev"
+           href="{{ query_obj.url_for_page(query_obj.current_page - 1) }}#pagination_content">
+    {% else %}
+        <a class="btn btn__super btn__disabled pagination_prev">
     {% endif %}
+            <span class="btn_icon__left cf-icon cf-icon-left"></span>
+            Newer
+        </a>
+    {% if query_obj.current_page < query_obj.pages %}
+        <a class="btn btn__super pagination_next"
+           href="{{ query_obj.url_for_page(query_obj.current_page + 1) }}#pagination_content">
+    {% else %}
+        <a class="btn btn__super btn__disabled pagination_next">
+    {% endif %}
+            Older
+            <span class="btn_icon__right cf-icon cf-icon-right"></span>
+        </a>
+        <form class="pagination_form" action="#pagination_content">
+            <label class="pagination_label" for="pagination_current-page">
+                Page
+                <span class="u-visually-hidden">
+                    number out of {{ query_obj.pages }} total pages
+                </span>
+            </label>
+            <input class="pagination_current-page"
+                   id="pagination_current-page"
+                   name="page"
+                   type="number"
+                   min="1"
+                   max="{{ query_obj.pages }}"
+                   value="{{ query_obj.current_page }}">
+            {#- Include any current filters when submitting this form to allow
+                for paginating through a filtered set of results.
+                Without this the form would change the url to `?page=X` and we
+                would lose any currently applied filters that are in the URL. -#}
+            {{ print_hidden_filters(filters)|safe }}
+            <label class="pagination_label">
+                <span aria-hidden="true">
+                    of {{ query_obj.pages }}
+                </span>
+            </label>
+            <button class="btn btn__link pagination_submit"
+                    id="pagination_submit"
+                    type="submit">
+                Go
+            </button>
+        </form>
+    </nav>
+{% endif %}
 
 {% endmacro %}
