--- a/_layouts/calendar-event-filters.html
+++ b/_layouts/calendar-event-filters.html
@@ -26,18 +26,7 @@
                 {%- endif -%}
                 </span>
             </dt>
-        {% for filter in active_filters %}
-            <dd class="list_item">
-                <span class="filtered-by_filter">
-                    {{ filter }}
-                {%- if not loop.last -%}
-                    ,
-                {%- elif active_date_filters|length > 0 -%}
-                    ,
-                {%- endif -%}
-                </span>
-            </dd>
-        {% endfor %}
+        {{ post_macros.filtered_items(active_filters, active_date_filters) }}
         {% for filter in active_date_filters %}
             <dd class="list_item">
                 <span class="filtered-by_filter">
